Improve home trophy cards / styles (#23)
* Improved styling

* Added angular tests workflow

* Improved home trophy cards

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,12 +1,26 @@
-$blue-main: #02365a;
-$blue-medium: #185c8b;
-$blue-light: #d9e8f2;
+$tq-blue-darker: #010b13;
+$tq-blue-dark: #012840;
+$tq-blue-medium: #02365a;
+$tq-blue-light: #4a88b3;
+$tq-blue-lighter: #e4eff7;
 
-$green-main: #2bab3f;
-$green-medium: #36a854;
-$green-light: #ccefd6;
+$tq-green-darker: #11432a;
+$tq-green-dark: #175b39;
+$tq-green-medium: #1f7a4d;
+$tq-green-light: #62a182;
+$tq-green-lighter: #d2e4db;
 
-$platinum: #2799f6;
-$gold: #f0c419;
-$silver: #c0c0c0;
-$bronze: #b87333;
+$tq-red-darker: #6b2121;
+$tq-red-dark: #932d2d;
+$tq-red-medium: #c43c3c;
+$tq-red-light: #d57676;
+$tq-red-lighter: #f3d8d8;
+
+$tq-white: #f4f7fb;
+
+$tq-shadow: rgba($tq-blue-darker, 0.15);
+
+$tq-trophy-platinum: #2799f6;
+$tq-trophy-gold: #d4af37;
+$tq-trophy-silver: #c0c4cc;
+$tq-trophy-bronze: #c97a35;
