--- a/src/app/components/collection-trophy-card/collection-trophy-card.component.scss
+++ b/src/app/components/collection-trophy-card/collection-trophy-card.component.scss
@@ -1,10 +1,10 @@
 @use 'styles/colors' as *;
 
 .trophy-card {
-  background-color: rgba(0, 0, 0, 0.03);
+  background-color: $tq-blue-lighter;
 
   &.completed {
-    background-color: $green-light;
+    background-color: $tq-green-lighter;
   }
 
   padding: 10px;
@@ -28,7 +28,7 @@
 
 .hidden-trophy-image-wrapper {
   cursor: default;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: $tq-blue-lighter;
   border-radius: 5px;
   display: flex;
   align-items: center;
@@ -36,7 +36,7 @@
 }
 
 .hidden-trophy-image {
-  color: rgba(0, 0, 0, 0.8);
+  color: $tq-blue-darker;
   font-size: 2rem;
   font-family: 'Arial', serif;
 }
@@ -70,7 +70,7 @@
   width: 16px;
   height: 16px;
   border-radius: 50%;
-  color: $green-main;
+  color: $tq-green-medium;
   display: flex;
   align-items: center;
   justify-content: center;
