--- a/src/app/components/profile-game-card/profile-collection-card.component.scss
+++ b/src/app/components/profile-game-card/profile-collection-card.component.scss
@@ -3,7 +3,7 @@
 .profile-game-card {
   border: 1px solid transparent;
   border-radius: 10px;
-  background-color: rgba($blue-main, 0.05);
+  background-color: $tq-blue-lighter;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -11,11 +11,11 @@
   width: 100%;
 
   &.completed {
-    background-color: $green-light;
+    background-color: $tq-green-lighter;
   }
 
   &:hover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 4px 8px $tq-shadow;
   }
 
   .game-infos {
@@ -55,7 +55,7 @@
     align-items: flex-end;
 
     &.completed {
-      color: $green-main;
+      color: $tq-green-medium;
     }
   }
 }
