--- a/src/app/components/trophy-filters/trophy-filters.component.html
+++ b/src/app/components/trophy-filters/trophy-filters.component.html
@@ -1,12 +1,13 @@
 <div class="trophy-filters">
     <div class="trophy-filter">
-        <mat-slide-toggle (toggleChange)="hiddenFilterChanges()" class="hidden-trophy-toggler"></mat-slide-toggle>
+        <mat-slide-toggle class="hidden-trophy-toggler" (toggleChange)="hiddenFilterChanges()"/>
         <span class="trophy-filter-label">Show hidden trophies</span>
     </div>
 
     <div class="trophy-filter">
         <span class="trophy-filter-label">Select trophy earned type</span>
-        <mat-radio-group (change)="earnedFilterChanges()" [(ngModel)]="wantedTrophyEarnedType">
+
+        <mat-radio-group [value]="filter()" (change)="changeFilter($event.value)">
             <mat-radio-button value="all">All</mat-radio-button>
             <mat-radio-button value="earned">Earned</mat-radio-button>
             <mat-radio-button value="notEarned">Not earned</mat-radio-button>
