Changed home page game list to recent games

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -9,7 +9,7 @@
 
     <div class="home-page-content">
         <div class="game-list">
-            <h2>List of games</h2>
+            <h2>Most recent popular games</h2>
             @for (game of gameListStore.results(); track game.id) {
                 <app-home-game-card [game]="game" class="home-game-card"></app-home-game-card>
             }
