--- a/src/app/components/home-trophy-card/home-trophy-card.component.scss
+++ b/src/app/components/home-trophy-card/home-trophy-card.component.scss
@@ -1,23 +1,17 @@
 @use 'styles/colors' as *;
 
 .home-trophy-card {
-  padding: 10px;
-  margin: 2px;
+  padding: 5px;
   background-color: $tq-blue-lighter;
-  border-radius: 5px;
+  border-bottom: 2px solid $tq-blue-medium;
   display: flex;
-  flex-direction: column;
-  gap: 10px;
-
-  .trophy-infos {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+  justify-content: space-between;
+  align-items: center;
 
   .image-title-game {
     display: flex;
     align-items: center;
+    gap: 10px;
   }
 
   .trophy-image {
@@ -26,7 +20,6 @@
   }
 
   .title-game {
-    margin-left: 10px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -34,11 +27,11 @@
 
   .trophy-title {
     font-weight: 600;
-    font-size: 1.1rem;
+    font-size: 16px;
   }
 
   .game-title {
-    font-size: 0.9rem;
+    font-size: 12px;
     color: rgb(0, 0, 0, 0.54);
   }
 
@@ -52,25 +45,6 @@
   .trophy-earned-date {
     font-size: 0.6rem;
     color: rgb(0, 0, 0, 0.54);
-  }
-
-  .user-infos {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .player-avatar {
-    border-radius: 50%;
-    border: 1px solid $tq-blue-medium;
-  }
-
-  .player-pseudo {
-    margin-left: 10px;
-    cursor: pointer;
-    font-size: 1.1rem;
-    color: $tq-blue-medium;
-    font-weight: 600;
   }
 
 }
