--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -3,59 +3,32 @@
 .home-page {
   padding-top: 20px;
   padding-bottom: 50px;
-}
-
-.home-page-header {
-  height: 300px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #ccc;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   gap: 20px;
-}
 
-.welcome-message {
-  font-size: 32px;
-  color: $tq-blue-medium;
-  font-weight: bolder;
-}
+  .left-column {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
 
-.home-summary {
-  height: 90%;
-}
+  .right-column {
+    width: 40%;
+  }
 
+  .block-header {
+    color: $tq-blue-medium;
+    font-size: 24px;
+    font-weight: bold;
+  }
 
-.home-page-content {
-  padding-top: 40px;
-  display: flex;
-  justify-content: space-between;
-}
+  .home-summary {
+    width: 80%;
+  }
 
-.game-list {
-  width: 60%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+  .home-game-card {
+    width: 100%;
+  }
 
-.home-game-card {
-  width: 100%;
-}
-
-.load-more {
-  cursor: pointer;
-  margin-top: 20px;
-}
-
-.last-obtained-trophies {
-  width: 35%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.home-trophy-card {
-  width: 100%;
 }
