Refacto : remove collection layer

--- a/src/app/components/game-summary/game-summary.component.scss
+++ b/src/app/components/game-summary/game-summary.component.scss
@@ -1,6 +1,6 @@
 @use 'styles/colors' as *;
 
-.collection-summary {
+.game-summary {
   display: flex;
   background-color: $tq-blue-lighter;
   border-radius: 10px;
