--- a/src/app/components/profile-game-card/profile-game-card.component.scss
+++ b/src/app/components/profile-game-card/profile-game-card.component.scss
@@ -23,7 +23,7 @@
     align-items: center;
   }
 
-  .collection-image {
+  .game-image {
     max-width: 80px;
     max-height: 80px;
     object-fit: contain;
