--- a/src/app/components/game-summary/game-summary.component.html
+++ b/src/app/components/game-summary/game-summary.component.html
@@ -1,12 +1,12 @@
-<div class="collection-summary">
+<div class="game-summary">
     <div class="image-wrapper">
-        <img alt="" class="game-image" src="{{collection()?.imageUrl ?? 'assets/icons/missing-game-image.svg'}}"/>
+        <img alt="" class="game-image" src="{{gameSummary().imageUrl}}"/>
     </div>
     <div class="summary-content">
         <div class="title-and-platform">
-            <span class="game-title">{{ collection()?.title }}</span>
+            <span class="game-title">{{ gameSummary().title }}</span>
             <div class="game-platform">
-                <span class="platform-label platform-label--{{collection()?.platform}}">{{ collection()?.platform }}</span>
+                <span class="platform-label platform-label--{{gameSummary().platform}}">{{ gameSummary().platform }}</span>
             </div>
         </div>
         <div class="trophy-count-wrapper">
