--- a/src/app/pages/game-page/game-page.component.scss
+++ b/src/app/pages/game-page/game-page.component.scss
@@ -1,6 +1,6 @@
 @use "styles/colors" as *;
 
-.collection-page {
+.game-page {
   padding-top: 20px;
   padding-bottom: 50px;
   display: flex;
@@ -8,7 +8,7 @@
   align-items: center;
   gap: 30px;
 
-  .collection-header {
+  .game-header {
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -17,7 +17,7 @@
     margin-bottom: 20px;
   }
 
-  .collection-summary {
+  .game-summary {
     width: 100%;
   }
 
