--- a/src/app/components/error-message/error-message.component.scss
+++ b/src/app/components/error-message/error-message.component.scss
@@ -21,4 +21,12 @@
     width: 80%;
     text-align: center;
   }
+
+  .retry-button {
+    color: $tq-red-darker;
+
+    &:hover {
+      background-color: $tq-red-lighter;
+    }
+  }
 }
